Added net452 target to projects

--- a/FluidDbClient/src/FluidDbClient.Sql/project.json
+++ b/FluidDbClient/src/FluidDbClient.Sql/project.json
@@ -2,11 +2,11 @@
     "copyright": "© 2016 David West",
     "title": "FluidDbClient.Sql",
     "description": "Sql Server provider for FluidDbClient.  This library also makes building data for Table-Valued Parameters a snap.",
-    "version": "1.0.0.0",
+    "version": "1.0.1",
 
     "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "FluidDbClient": "1.0.0-*",
+        "FluidDbClient": "1.0.1",
         "System.Data.SqlClient": "4.1.0"
     },
 
@@ -16,7 +16,8 @@
         },
         "netstandard1.6": {
             "imports": "dnxcore50"
-        }
+        },
+        "net452": {}
     },
 
     "scripts": {
