--- a/.gitignore
+++ b/.gitignore
@@ -177,8 +177,8 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-*.mdf
-*.ldf
+# *.mdf
+# *.ldf
 
 # Business Intelligence projects
 *.rdl.data
