--- a/FluidDbClient/src/FluidDbClient/project.json
+++ b/FluidDbClient/src/FluidDbClient/project.json
@@ -1,8 +1,8 @@
 {
     "copyright": "© 2016 David West",
-    "description": "When you absolutely need to work with ADO.NET but want to ditch 95% of the boilerplate code. Perfect fit if you need to create queries and/or map data to complex objects that you won't trust to your ORM.",
+    "description": "When you absolutely need to work with ADO.NET but want to ditch 95% of the boilerplate code. Perfect fit if you need to run explicit SQL and/or map raw data to complex objects that you won't trust to your ORM.",
     "title": "FluidDbClient",
-    "version": "1.0.1",
+    "version": "1.0.2",
 
     "dependencies": {
         "System.Data.Common": "4.1.0"
