--- a/FluidDbClient/src/FluidDbClient/project.json
+++ b/FluidDbClient/src/FluidDbClient/project.json
@@ -1,30 +1,46 @@
 {
-    "copyright": "© 2016 David West",
-    "description": "When you absolutely need to work with ADO.NET but want to ditch 95% of the boilerplate code. Perfect fit if you need to run explicit SQL and/or map raw data to complex objects that you won't trust to your ORM.",
-    "title": "FluidDbClient",
-    "version": "1.0.2",
+  "copyright": "© 2017 David West",
+  "description": "When you absolutely need to work with ADO.NET but want to ditch 95% of the boilerplate code. Perfect fit if you need to run explicit SQL and/or map raw data to complex objects that you won't trust to your ORM.",
+  "title": "FluidDbClient",
+  "version": "1.0.3",
 
-    "dependencies": {
-        "System.Data.Common": "4.1.0"
+  "frameworks": {
+    "net45": {
+      "buildOptions": {
+        "define": [ "ASYNC" ]
+      },
+      "frameworkAssemblies": {
+        "System.Data": "4.0.0.0"
+      }
     },
-
-    "frameworks": {
-        "netstandard1.2": {
-            "dependencies": {
-                "System.Runtime.Extensions": "4.1.0",
-                "System.Collections": "4.0.11",
-                "System.Linq": "4.1.0",
-                "System.Threading": "4.0.11",
-                "System.Reflection": "4.1.0",
-                "System.Reflection.Extensions": "4.0.1"
-            }
-        },
-        "net452": {}
+    "net451": {
+      "buildOptions": {
+        "define": [ "ASYNC" ]
+      },
+      "frameworkAssemblies": {
+        "System.Data": "4.0.0.0"
+      }
     },
-
-    "scripts": {
-        "postcompile": [
-            "dotnet pack --no-build --configuration Release"
-        ]
+    "netstandard1.3": {
+      "buildOptions": {
+        "define": [ "ASYNC", "COREFX" ]
+      },
+      "dependencies": {
+        "System.Collections": "4.0.11",
+        "System.Data.SqlClient": "4.1.0",
+        "System.Linq": "4.1.0",
+        "System.Reflection": "4.1.0",
+        "System.Reflection.Extensions": "4.0.1",
+        "System.Runtime": "4.1.0",
+        "System.Runtime.Extensions": "4.1.0",
+        "System.Threading": "4.0.11"
+      }
     }
+  },
+
+  "scripts": {
+    "postcompile": [
+      "dotnet pack --no-build --configuration Release"
+    ]
+  }
 }
