--- a/FluidDbClient/src/Sandbox/Sandbox.csproj
+++ b/FluidDbClient/src/Sandbox/Sandbox.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
+    <PackageReference Include="NETStandard.Library" Version="1.6.1" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
   </ItemGroup>
