--- a/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
+++ b/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
@@ -8,6 +8,7 @@
     <TargetFrameworks>net451;netstandard1.3;netstandard2.0</TargetFrameworks>
     <AssemblyName>FluidDbClient</AssemblyName>
     <PackageId>FluidDbClient</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
  
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
