--- a/FluidDbClient/src/FluidDbClient.Sql/FluidDbClient.Sql.csproj
+++ b/FluidDbClient/src/FluidDbClient.Sql/FluidDbClient.Sql.csproj
@@ -5,7 +5,7 @@
     <Copyright>© 2017 David West</Copyright>
     <AssemblyTitle>FluidDbClient.Sql</AssemblyTitle>
     <VersionPrefix>1.1.2</VersionPrefix>
-    <TargetFrameworks>net451;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>FluidDbClient.Sql</AssemblyName>
     <PackageId>FluidDbClient.Sql</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -14,20 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FluidDbClient\FluidDbClient.csproj" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' OR '$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
