Cleaned up index specifications on table types

--- a/FluidDbClient/SandboxEf/SandboxEf.csproj
+++ b/FluidDbClient/SandboxEf/SandboxEf.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\Extensions.cs" />
     <Compile Include="Entities\Widget.cs" />
     <Compile Include="Entities\WidgetEntityConfig.cs" />
+    <Compile Include="Entities\WidgetType.cs" />
     <Compile Include="Initializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
