--- a/FluidDbClient/FluidDbClient.Sql.Test/App.config
+++ b/FluidDbClient/FluidDbClient.Sql.Test/App.config
@@ -4,13 +4,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
   <connectionStrings>
-    <add name = "DataContext"
-         connectionString = "Data Source=localhost;Initial Catalog=SandboxEf;Integrated Security = true"
-         providerName = "System.Data.SqlClient"/>
+    <add name="DataContext" connectionString="Data Source=localhost;Initial Catalog=SandboxEf;Integrated Security = true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
