--- a/FluidDbClient/src/FluidDbClient.Sql/FluidDbClient.Sql.csproj
+++ b/FluidDbClient/src/FluidDbClient.Sql/FluidDbClient.Sql.csproj
@@ -8,7 +8,7 @@
     <FileVersion>1.1.3</FileVersion>
     <Version>1.1.3</Version>
     <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
-    <Description>The SQL Server provider for FluidDbClient.  This library also makes working with Table Valued Parameters a snap.</Description>
+    <Description>SQL Server provider for FluidDbClient.  This library also makes working with Table Valued Parameters a snap.</Description>
     <Authors>David West, Brandon Johnson</Authors>
     <Copyright>© 2019 David West</Copyright>
     <PackageProjectUrl>https://github.com/davidwest/FluidDbClient</PackageProjectUrl>
