--- a/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
+++ b/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
@@ -8,7 +8,7 @@
     <FileVersion>1.1.3</FileVersion>
     <Version>1.1.3</Version>
     <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
-    <Description>When you absolutely need ADO.NET but detest the boilerplate.  Do parameterized SQL with ease, asynchronously or not.  Map deep POCOs with granular control beyond that of your ORM. This is the core assembly; to use with SQL Server, get FluidDbClient.Sql.</Description>
+    <Description>When you absolutely need ADO.NET but want to ditch the boilerplate.  Do parameterized SQL with ease, asynchronously or not.  Map deep POCOs with granular control beyond that of your ORM. This is the core assembly; to use with SQL Server, get FluidDbClient.Sql.</Description>
     <Authors>David West, Brandon Johnson</Authors>
     <Copyright>© 2019 David West</Copyright>
     <PackageProjectUrl>https://github.com/davidwest/FluidDbClient</PackageProjectUrl>
@@ -16,6 +16,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>sql micro orm ado ado.net object relational mapper data table connection transaction parameter</PackageTags>
     <PackageIconUrl>http://i64.tinypic.com/2hog1du.png</PackageIconUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageReleaseNotes>Added new mapping extensions</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
