--- a/FluidDbClient/FluidDbClient.Sql.Test/App.config
+++ b/FluidDbClient/FluidDbClient.Sql.Test/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DataContext" connectionString="Data Source=localhost;Initial Catalog=SandboxEf;Integrated Security = true" providerName="System.Data.SqlClient"/>
+    <add name="DataContext" connectionString="Data Source=localhost;Initial Catalog=FluidDbClient.Sql.Test;Integrated Security = true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
