--- a/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
+++ b/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
@@ -57,9 +57,11 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
+    <Compile Include="DiagnosticExtensions.cs" />
     <Compile Include="EfConfigurationExtensions.cs" />
     <Compile Include="Entities\Component.cs" />
     <Compile Include="Entities\ComponentStyle.cs" />
@@ -76,11 +78,12 @@
     <Compile Include="Entities\Diagnostics\WidgetComparer.cs" />
     <Compile Include="Entities\WidgetEnvironment.cs" />
     <Compile Include="Initializer.cs" />
-    <Compile Include="MappingTest.cs" />
+    <Compile Include="DataSetTests.cs" />
+    <Compile Include="MappingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableTypes\NewWidgetTableTypeMap.cs" />
     <Compile Include="TableTypes\UpdatedWidgetTableTypeMap.cs" />
-    <Compile Include="TvpTest.cs" />
+    <Compile Include="TvpTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
