--- a/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
+++ b/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
@@ -4,9 +4,9 @@
     <PackageId>FluidDbClient</PackageId>
     <AssemblyName>FluidDbClient</AssemblyName>
     <AssemblyTitle>FluidDbClient</AssemblyTitle>
-    <AssemblyVersion>1.1.3</AssemblyVersion>
-    <FileVersion>1.1.3</FileVersion>
-    <Version>1.1.3</Version>
+    <AssemblyVersion>1.1.4</AssemblyVersion>
+    <FileVersion>1.1.4</FileVersion>
+    <Version>1.1.4</Version>
     <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
     <Description>When you absolutely need ADO.NET but want to ditch the boilerplate.  Do parameterized SQL with ease, asynchronously or not.  Map deep POCOs with granular control beyond that of your ORM. This is the core assembly; to use with SQL Server, get FluidDbClient.Sql.</Description>
     <Authors>David West, Brandon Johnson</Authors>
@@ -18,7 +18,7 @@
     <PackageIconUrl>http://i64.tinypic.com/2hog1du.png</PackageIconUrl>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <NeutralLanguage>en</NeutralLanguage>
-    <PackageReleaseNotes>Added new mapping extensions</PackageReleaseNotes>
+    <PackageReleaseNotes>Added support for retrieving DataTables and DataSets from IManagedDbQuery; simplified IDbProvider</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
