--- a/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
+++ b/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
@@ -60,7 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkInsertTests.cs" />
     <Compile Include="DataContext.cs" />
+    <Compile Include="DataTableMappingTests.cs" />
     <Compile Include="DiagnosticExtensions.cs" />
     <Compile Include="EfConfigurationExtensions.cs" />
     <Compile Include="Entities\Component.cs" />
