--- a/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
+++ b/FluidDbClient/FluidDbClient.Sql.Test/FluidDbClient.Sql.Test.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableTypes\NewWidgetTableTypeMap.cs" />
     <Compile Include="TableTypes\UpdatedWidgetTableTypeMap.cs" />
+    <Compile Include="TransactionTests.cs" />
     <Compile Include="TvpTests.cs" />
   </ItemGroup>
   <ItemGroup>
