--- a/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
+++ b/FluidDbClient/src/FluidDbClient/FluidDbClient.csproj
@@ -7,7 +7,7 @@
     <AssemblyVersion>1.1.7</AssemblyVersion>
     <FileVersion>1.1.7</FileVersion>
     <Version>1.1.7</Version>
-    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net451;net462;netstandard2.0</TargetFrameworks>
     <Description>When you absolutely need ADO.NET but want to ditch the boilerplate.  Do parameterized SQL with ease, asynchronously or not.  Map deep POCOs with granular control beyond that of your ORM. This is the core assembly; to use with SQL Server, get FluidDbClient.Sql.</Description>
     <Authors>David West, Brandon Johnson</Authors>
     <Copyright>© 2019 David West</Copyright>
@@ -20,6 +20,7 @@
     <NeutralLanguage>en</NeutralLanguage>
     <PackageReleaseNotes>Added DbManagedCommand.ExecuteWithoutTransaction() / .ExecuteWithoutTransactionAsync()</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
@@ -30,9 +31,16 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="Microsoft.CSharp" />  
+  </ItemGroup>
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Collections" Version="4.3.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
     <PackageReference Include="System.Reflection.Extensions" Version="4.3.0" />
@@ -40,11 +48,12 @@
     <PackageReference Include="System.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
     <PackageReference Include="System.Threading" Version="4.3.0" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.4.2" />
+  <ItemGroup>  
     <PackageReference Include="System.Runtime" Version="4.3.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
