--- a/FluidDbClient/FluidDbClient.csproj
+++ b/FluidDbClient/FluidDbClient.csproj
@@ -38,9 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>  
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />  
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />  
     <PackageReference Include="System.Runtime" Version="4.3.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.1" />
   </ItemGroup>
 
